--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <form class="login-form">
   <div>
     <label for="user-login">username:</label>
-    <input type="text" id="ueser-login" />
+    <input type="text" id="user-login" />
   </div>
   <div>
     <label for="password-login">password:</label>
