--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,10 +7,10 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
+      <label for="post-body_text">Comment</label>
+      <input id="post-body_text" name="post-body_text" />
     </div>
-    <button type="submit" class="btn">Create</button>
+    <button type="submit" class="btn button">Create</button>
   </form>
 </section>
 
