--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,10 @@
 <article class="post">
-  <div class="title">
+  <div class="title is-3">
     <h3>{{title}}</h3>
+  </div>
+  <div class="subtitle is-5">
     <p>({{body_text}})</p>
   </div>
-
   <div class="meta">
     <a href="/post/{{id}}">{{comments.length}}
       {{format_plural "comment" comments.length}}</a>
